--- a/index.html
+++ b/index.html
@@ -804,6 +804,15 @@
     <!-- Load JavaScript modules -->
     <script src="js/translation-service.js?v=2.8"></script>
     <script src="js/languages.js?v=2.8"></script>
+    <!-- Load region data files first -->
+    <script src="js/regions/void.js?v=2.8"></script>
+    <script src="js/regions/shadowisles.js?v=2.8"></script>
+    <script src="js/regions/demacia.js?v=2.8"></script>
+    <script src="js/regions/noxus.js?v=2.8"></script>
+    <script src="js/regions/ionia.js?v=2.8"></script>
+    <script src="js/regions/piltover.js?v=2.8"></script>
+    <script src="js/regions/specialChampions.js?v=2.8"></script>
+    <!-- Load main data file after regions -->
     <script src="js/data.js?v=2.8"></script>
     <script src="js/database.js?v=2.8"></script>
     <script src="js/app.js?v=2.8"></script>
